<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c2c2c4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@android:color/transparent"
        android:src="@drawable/logo1" />

    <ImageButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="40dp"
        android:background="@drawable/fb_login_en" />

    <TextView
        android:id="@+id/txt_dont_ask_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_limit_data"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/dont_ask_friend_list_en"
        android:textColor="#444444" />

    <TextView
        android:id="@+id/txt_dont_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_dont_ask_friend"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/dont_post_en"
        android:textColor="#444444" />

    <TextView
        android:id="@+id/txt_limit_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_prevent_spam"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/limit_data_en"
        android:textColor="#444444" />

    <TextView
        android:id="@+id/link_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/link_term"
        android:layout_alignBottom="@+id/link_term"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:background="@android:color/transparent"
        android:text="@string/privacy_en"
        android:textColorLink="@color/link_color"
        android:textColor="#666666"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/link_term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:background="@android:color/transparent"
        android:text="@string/term_of_use_en"
        android:textColor="#666666"
        android:textColorLink="@color/link_color"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txt_dont_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_dont_post"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/dont_share_identity_en"
        android:textColor="#444444" />

    <TextView
        android:id="@+id/txt_prevent_spam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/prevent_spam_en"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_unless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_dont_share"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="(unless required by law)"
        android:textColor="@color/white" />

</RelativeLayout>